--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,177 @@
-.App {
+.page {
+  width: 100%;
+  height: 100%;
+  padding: 20px 40px;
+  background-color: #f7fafc;
+}
+
+.nav {
+  margin-bottom: 25px;
+  padding: 15px 0;
+}
+
+.nav > .link {
+  margin-right: 20px;
+  text-decoration: none;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.gray {
+  color: #647388;
+}
+
+.dark {
+  color: #242d3c
+}
+
+.label {
+  font-weight: 500;
+  margin: 8px 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.subtext {
+  margin: 8px 0;
+  color: #647388;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.photos {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 50px;
+  row-gap: 50px;
+}
+
+.photo-container {
+  height: 220px;
+  width: 200px;
+}
+
+.photo.clicked {
+  border: 2px solid #4f47dc;
+  padding: 2px;
+}
+
+.photo {
+  object-fit: cover;
+  height: 150px;
+  width: 195px;
+  border-radius: 12px;
+  padding: 2px;
+  border: 2px solid #f7fafc;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.sidebar {
+  min-width: 25%;
+  max-width: 25%;
+  border-left: 1px #e5eaf0 solid;
+  padding: 0 2%;
+}
+
+.section {
+  margin: 15px 0;
+  text-align: left;
+}
+
+.border-b {
+  border-bottom: 1px rgb(201, 201, 201) solid;
+}
+
+.button {
+  background-color: white;
+  border:rgb(201, 201, 201) solid 1px;
   text-align: center;
+  width: 100%;
+  border-radius: 8px;
+  font-size: 1em;
+  padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.image-details {
+  position: sticky;
+  top: 50px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 50px auto;
+  text-align: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.file-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin: 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.file-details > div {
+  text-align: left;
 }
+
+.highlight {
+  height: 300px;
+  width: 100%;
+  border-radius: 10px;
+  padding: 2px;
+  object-fit: cover;
+}
+
+.information {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 100%;
+}
+
+.information > .columns {
+  border-top: 1px rgb(201, 201, 201) solid;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.link {
+  /* remove all default button styles */
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+
+  position: relative; /* set position to relative */
+  color: #647388; /* set text color */
+  margin-bottom: 10px;
+}
+
+.link.wide {
+  color:#4f47dc;
+}
+
+.link.wide::after {
+  margin-bottom: 10px;
+  content: ""; /* add a pseudo-element */
+  position: absolute; /* set position to absolute */
+  left: 0; /* align to the left */
+  bottom: -35px; /* set distance from text */
+  height: 2px; /* set height of underline */
+  width: 100%; /* set initial width to 0 */
+  background-color: #4f47dc; /* set color of underline */
+  transition: width 0.3s ease-in-out; /* add animation transition */
+}
+
