--- a/src/App.css
+++ b/src/App.css
@@ -101,11 +101,11 @@
 
 .image-details {
   position: sticky;
-  top: 50px;
+  top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 50px auto;
+  margin-top: 20px auto;
   text-align: center;
   align-items: center;
 }
