--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
 }
 
 .text-normal {
-  margin: 8px 0;
+  margin: 0.2em 0;
   color: #647388;
 }
 
@@ -83,8 +83,8 @@
 
 .photo-grid__img {
   object-fit: cover;
-  height: 150px;
-  width: 195px;
+  height: 10em;
+  width: 13em;
   border-radius: 12px;
   padding: 2px;
   border: 2px solid #f7fafc;
@@ -102,13 +102,13 @@
 }
 
 .section {
-  margin: 20px 0;
+  margin: 1em 0;
   text-align: left;
 }
 
 .sidebar__wrapper {
   position: sticky;
-  top: 30px;
+  top: 2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -129,7 +129,7 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  margin: 10px 0;
+  margin: 1em 0;
   text-align: left;
 }
 
@@ -139,10 +139,9 @@
 }
 
 .sidebar__image {
-  height: 300px;
+  height: 18em;
   width: 100%;
   border-radius: 10px;
-  padding: 2px;
   object-fit: cover;
 }
 
@@ -160,8 +159,8 @@
   width: 100%;
   border-radius: 8px;
   font-size: 1em;
-  padding: 10px;
-  margin-top: 20px;
+  padding: 1em;
+  margin-top: 1em;
 }
 
 .information__column {
