--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 20px auto;
+  margin-top: 20px;
   text-align: center;
   align-items: center;
 }
