--- a/src/App.css
+++ b/src/App.css
@@ -71,14 +71,15 @@
 
 .photo-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 30px;
-  row-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(13em, 1fr));
+  column-gap: 2em;
+  row-gap: 2em;
+  max-width: 100%;
 }
 
 .photo-grid__wrapper {
-  height: 220px;
-  width: 200px;
+  height: 12.5em;
+  width: 13em;
 }
 
 .photo-grid__img {
@@ -90,6 +91,39 @@
   border: 2px solid #f7fafc;
   max-width: 100%;
   max-height: 100%;
+}
+
+.sidebar {
+  min-width: 25rem;
+  max-width: 25%;
+  border-left: 1px #e5eaf0 solid;
+  padding: 0 2%;
+}
+
+@media screen and (max-width: 480px) {
+  .photo-grid__wrapper {
+    height: 20em;
+    width: 100%;
+  } 
+
+  .photo-grid__img {
+    height: 80%;
+    width: calc(100% - 6px);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .sidebar {
+    margin: 0 auto;
+    min-width: 10rem;
+    max-width: 20rem;
+    max-height: 40rem;
+  }
+
+  .sidebar-dialog {
+    border: 0;
+    border-radius: 5px;
+  }
 }
 
 .photo-grid__img--selected {
@@ -117,12 +151,7 @@
   align-items: center;
 }
 
-.sidebar {
-  min-width: 25%;
-  max-width: 25%;
-  border-left: 1px #e5eaf0 solid;
-  padding: 0 2%;
-}
+
 
 .sidebar__file {
   display: flex;
