--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,43 @@ code {
     monospace;
 }
 
+/* Box sizing reset */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Margin and padding reset */
+body,
+h1, h2, h3, h4, h5, h6,
+p,
+ul, ol,
+dl, dd, dt,
+form, fieldset, legend,
+blockquote, cite,
+figure {
+  margin: 0;
+  padding: 0;
+}
+
+/* Font size reset */
+html {
+  font-size: 16px;
+}
+
+/* List style reset */
+ul, ol {
+  list-style: none;
+}
+
+/* Link reset */
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+
 /* remove all default button styling */
 button {
   border: none;
